force-app/main/default/objects/Job_Application__c/fields/Candidate_Age__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Age__c</fullName>
    <label>Candidate Age</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>