force-app/main/default/objects/Job_Application__c/fields/Candidate_Salary__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Salary__c</fullName>
    <label>Candidate Salary</label>
    <length>15</length>
    <type>Text</type>
</CustomField>